Add basic UI to fetch and play podcasts

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "node index.js",
     "watch": "node --watch server.js",
-    "devStart": "nodemon script.ts"
+    "devStart": "nodemon script.ts",
+    "test": "vitest"
   },
   "repository": {
     "type": "git",
@@ -21,6 +22,7 @@
   "homepage": "https://github.com/dykflint/podcast-app#readme",
   "dependencies": {
     "express": "^5.2.1",
-    "rss-parser": "^3.13.0"
+    "rss-parser": "^3.13.0",
+    "vitest": "^4.0.16"
   }
 }
