--- a/package.json
+++ b/package.json
@@ -21,8 +21,15 @@
   },
   "homepage": "https://github.com/dykflint/podcast-app#readme",
   "dependencies": {
+    "@prisma/adapter-pg": "^7.2.0",
+    "@prisma/client": "^7.2.0",
+    "dotenv": "^17.2.3",
     "express": "^5.2.1",
+    "pg": "^8.16.3",
     "rss-parser": "^3.13.0",
     "vitest": "^4.0.16"
+  },
+  "devDependencies": {
+    "prisma": "^7.2.0"
   }
 }
