Move url from schema.prisma to prisma.config.ts

--- a/.env
+++ b/.env
@@ -10,3 +10,4 @@
 # one found in a remote Prisma Postgres URL, does not contain any sensitive information.
 
 DATABASE_URL="postgresql://konstantin:@localhost:5432/podcast_app"
+PORT=3000
